[gd_scene load_steps=17 format=3 uid="uid://bapfi0v8fn38h"]

[ext_resource type="PackedScene" uid="uid://kkt6g2ery6vj" path="res://Scenes/Units/unit_base.tscn" id="1_uogj1"]
[ext_resource type="Script" path="res://Scenes/Units/unit_egg_projectile.gd" id="2_iqmq1"]
[ext_resource type="Texture2D" uid="uid://1yaupgrvy6mm" path="res://Assets/Images/shadow.png" id="3_obvtm"]
[ext_resource type="Resource" uid="uid://63hd0jjrlgnw" path="res://Scenes/Units/Combat/Stats/stats_crow_egg.tres" id="3_sthdx"]
[ext_resource type="PackedScene" uid="uid://bhp551sabqfag" path="res://Scenes/Units/System/team_sprite.tscn" id="5_37chy"]
[ext_resource type="Shader" path="res://Code/Shaders/unit_sprite.gdshader" id="6_gn125"]
[ext_resource type="Texture2D" uid="uid://b15w5p7b8vic1" path="res://Assets/mob/egg_green.png" id="7_8sr3f"]
[ext_resource type="Texture2D" uid="uid://c03f5x8t2ua2j" path="res://Assets/mob/eggsplat_green.png" id="8_42w64"]
[ext_resource type="PackedScene" uid="uid://civ0qmljlf0kk" path="res://Scenes/Important/googley_eyes_pair.tscn" id="8_tjg3f"]
[ext_resource type="AudioStream" uid="uid://dyfd43uyehokt" path="res://Assets/sound/eggsplat.wav" id="11_ryxwk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hncq6"]
render_priority = -1
blend_mode = 3
no_depth_test = true
shading_mode = 0
albedo_texture = ExtResource("3_obvtm")
texture_filter = 0
texture_repeat = false

[sub_resource type="PlaneMesh" id="PlaneMesh_0vjf4"]
material = SubResource("StandardMaterial3D_hncq6")
size = Vector2(3, 1.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s70ai"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_gn125")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/roughness = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/texture_albedo = ExtResource("7_8sr3f")

[sub_resource type="QuadMesh" id="QuadMesh_3putr"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_s70ai")
size = Vector2(1.46, 2.03)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vayy8"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("6_gn125")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/roughness = null
shader_parameter/specular = null
shader_parameter/metallic = null
shader_parameter/texture_albedo = ExtResource("8_42w64")

[sub_resource type="QuadMesh" id="QuadMesh_i0nau"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_vayy8")
size = Vector2(1.66, 1.83)

[node name="UnitEggProjectile" instance=ExtResource("1_uogj1")]
script = ExtResource("2_iqmq1")
unit_type = 2
stat_block = ExtResource("3_sthdx")
unit_move_type = 1

[node name="Shadow" parent="LaneOffset" index="0"]
mesh = SubResource("PlaneMesh_0vjf4")

[node name="BodyTransform" type="Node3D" parent="LaneOffset/FacingRotation/Sprites" index="0"]
unique_name_in_owner = true

[node name="EggSprite" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="0" instance=ExtResource("5_37chy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00476821, 0.00201911, 0)
asset_var_name = "egg_sprite"

[node name="dummy" parent="LaneOffset/FacingRotation/Sprites/BodyTransform/EggSprite" index="0"]
mesh = SubResource("QuadMesh_3putr")

[node name="EggSplatSprite" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="1" instance=ExtResource("5_37chy")]
unique_name_in_owner = true
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.126426, -0.121934, 0)
visible = false
asset_var_name = "egg_splat_sprite"

[node name="dummy" parent="LaneOffset/FacingRotation/Sprites/BodyTransform/EggSplatSprite" index="0"]
mesh = SubResource("QuadMesh_i0nau")

[node name="GoogleyEyesPair" parent="LaneOffset/FacingRotation/Sprites/BodyTransform" index="2" instance=ExtResource("8_tjg3f")]
unique_name_in_owner = true
dampening = 0.9

[node name="TargetingTimer" type="Timer" parent="." index="1"]
unique_name_in_owner = true
wait_time = 0.25

[node name="UnitTargeting" parent="." index="2"]
max_forward_range = 10.0
max_backward_range = 10.0
max_vertical_range = 10.0
splash_radius = 10.0
target_scan_interval = 10.0
max_targets = 20
targeting_mask = 253

[node name="Egg Splat Sound Player" type="AudioStreamPlayer" parent="." index="3"]
unique_name_in_owner = true
stream = ExtResource("11_ryxwk")
volume_db = -25.0

[editable path="LaneOffset/FacingRotation/Sprites/BodyTransform/EggSprite"]
[editable path="LaneOffset/FacingRotation/Sprites/BodyTransform/EggSplatSprite"]
